[package]
name = "DysonSphereProgramCalculator_Server"
version = "0.1.0"
authors = ["eweca1992 <dreamenako@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.1"
glob = "0.3"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
bytes = "1.0"
